src/objects/OED_Category__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LJ_Euro_Percent__c</fullName>
        <label>LJ % (€)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LJ_Euro__c</fullName>
        <label>LJ €</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LJ_Percent__c</fullName>
        <label>LJ %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LJ_Units__c</fullName>
        <label>LJ Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LM_Euro_Percent__c</fullName>
        <label>LM % (€)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LM_Euro__c</fullName>
        <label>LM €</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LM_Percent__c</fullName>
        <label>LM %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LM_Unit__c</fullName>
        <label>LM Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OED__c</fullName>
        <label>OED</label>
        <referenceTo>OED__c</referenceTo>
        <relationshipLabel>OED Categories</relationshipLabel>
        <relationshipName>OED_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VJ_Euro_Percent__c</fullName>
        <label>VJ % (€)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VJ_Euro__c</fullName>
        <label>VJ €</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VJ_Percent__c</fullName>
        <label>VJ %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VJ_Units__c</fullName>
        <label>VJ Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OED Category</label>
    <nameField>
        <label>OED Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OED Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>